--- a/src/main/resources/dk/sdu/tek/presentation/VisitorMenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/VisitorMenu.fxml
@@ -16,7 +16,7 @@
          <tabs>
             <Tab>
                <content>
-                  <AnchorPane fx:id="wrapper" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0">
                       <children>
                           <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
                           <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
@@ -30,21 +30,9 @@
                           <Label layoutX="477.0" layoutY="179.0" text="Producer" />
                           <Label layoutX="663.0" layoutY="179.0" text="Producer ID" />
                           <TextField fx:id="thisProducerIDTextField" layoutX="663.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" />
+                          <Label layoutX="477.0" layoutY="253.0" text="Krediteringer" />
+                          <ListView fx:id="productionCreditList" layoutX="477.0" layoutY="271.0" prefHeight="315.0" prefWidth="288.0" />
                       </children>
-                  <!--    <children>-->
-                  <!--        <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />-->
-                  <!--        <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />-->
-                  <!--        <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />-->
-                  <!--        <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">-->
-                  <!--            <items>-->
-                  <!--                <MenuItem mnemonicParsing="false" text="Produktioner" />-->
-                  <!--                <MenuItem mnemonicParsing="false" text="Medvirkende" />-->
-                  <!--            </items>-->
-                  <!--        </MenuButton>-->
-                  <!--        <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />-->
-                  <!--        <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />-->
-                  <!--        <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />-->
-                  <!--    </children>-->
                   </AnchorPane>
                </content>
             </Tab>
