--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -30,6 +30,8 @@
                         <Label layoutX="477.0" layoutY="179.0" text="Producer" />
                         <Label layoutX="663.0" layoutY="179.0" text="Producer ID" />
                         <TextField fx:id="thisProducerIDTextField" layoutX="663.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" />
+                        <Label layoutX="477.0" layoutY="253.0" text="Krediteringer" />
+                        <ListView fx:id="productionCreditList" layoutX="477.0" layoutY="271.0" prefHeight="315.0" prefWidth="288.0" />
                      </children>
                   </AnchorPane>
                </content>
