--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -14,13 +16,13 @@
    <children>
       <TabPane fx:id="mainTab" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="954.0" style="-fx-background-color: #fff;" tabClosingPolicy="UNAVAILABLE">
          <tabs>
-            <Tab text="Produktioner">
+            <Tab text="Søg">
                <content>
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
                         <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
-                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
-                        <Button layoutX="260.0" layoutY="43.0" mnemonicParsing="false" onAction="#searchForProduction" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" prefHeight="26.0" prefWidth="187.0" />
+                        <Button layoutX="227.0" layoutY="43.0" mnemonicParsing="false" onAction="#searchForProduction" prefHeight="25.0" prefWidth="57.0" text="Søg" />
                         <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" onMouseClicked="#getSelectedItem" prefHeight="507.0" prefWidth="346.0" />
                         <TextField fx:id="productionNameTextField" layoutX="477.0" layoutY="123.0" prefHeight="26.0" prefWidth="155.0" />
                         <TextField fx:id="productionIDTextField" layoutX="663.0" layoutY="123.0" prefHeight="26.0" prefWidth="90.0" />
@@ -33,6 +35,14 @@
                         <Label layoutX="477.0" layoutY="253.0" text="Krediteringer" />
                         <ListView fx:id="productionCreditList" layoutX="477.0" layoutY="271.0" prefHeight="315.0" prefWidth="288.0" />
                         <Button fx:id="adminDeleteButton" layoutX="787.0" layoutY="198.0" mnemonicParsing="false" onAction="#adminDeleteCredit" text="Delete" />
+                        <MenuButton layoutX="291.0" layoutY="43.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="88.0" text="Vælg">
+                          <items>
+                            <MenuItem fx:id="selectProducer" mnemonicParsing="false" text="Producer" />
+                            <MenuItem fx:id="selectProduction" mnemonicParsing="false" text="Produktion" />
+                              <MenuItem fx:id="selectCredits" mnemonicParsing="false" text="Krediteringer" />
+                              <MenuItem fx:id="selectPeople" mnemonicParsing="false" text="Personer" />
+                          </items>
+                        </MenuButton>
                      </children>
                   </AnchorPane>
                </content>
