--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -23,12 +23,12 @@
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
                         <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
-                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" onKeyReleased="#setResultList" prefHeight="26.0" prefWidth="252.0" />
+                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" onKeyReleased="#setResultList" prefHeight="26.0" prefWidth="230.0" />
                         <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" onMouseClicked="#getSelectedItem" prefHeight="507.0" prefWidth="346.0" />
                         <Label fx:id="creditLabel" layoutX="477.0" layoutY="253.0" text="Krediteringer" />
                         <ListView fx:id="creditList" layoutX="477.0" layoutY="271.0" prefHeight="315.0" prefWidth="288.0" />
                         <Button fx:id="adminDeleteButton" layoutX="787.0" layoutY="198.0" mnemonicParsing="false" onAction="#adminDeleteCredit" text="Delete" />
-                        <MenuButton fx:id="selectItem" layoutX="291.0" layoutY="43.0" mnemonicParsing="false" onAction="#setResultList" prefHeight="26.0" prefWidth="88.0" text="Vælg">
+                        <MenuButton fx:id="selectItem" layoutX="269.0" layoutY="43.0" mnemonicParsing="false" onAction="#setResultList" prefHeight="26.0" prefWidth="110.0" text="Vælg">
                            <items>
                               <RadioMenuItem fx:id="selectProducers" mnemonicParsing="false" onAction="#setResultList" text="Producere">
                                  <toggleGroup>
@@ -39,7 +39,7 @@
                               <RadioMenuItem fx:id="selectPeople" mnemonicParsing="false" onAction="#setResultList" text="Personer" toggleGroup="$selectToggle" />
                            </items>
                         </MenuButton>
-                        <TextArea fx:id="infoArea" layoutX="477.0" layoutY="79.0" prefHeight="164.0" prefWidth="288.0" />
+                        <TextArea fx:id="infoArea" editable="false" layoutX="477.0" layoutY="79.0" prefHeight="164.0" prefWidth="288.0" />
                      </children>
                   </AnchorPane>
                </content>
